Add Netlify deployment and update docs
Added Netlify deployment workflow, configuration files, and deployment checklists. Updated documentation files for deployment, project summary, and quick start. Improved .gitignore for Netlify compatibility and added firebase_options.dart to the repo. Updated assets and various markdown files for clarity and completeness.

--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ lcov.info
 # Firebase
 **/google-services.json
 **/GoogleService-Info.plist
-firebase_options.dart
+# firebase_options.dart - потрібний для Netlify deployment
 
 # IDE
 .idea/
