Add Netlify build script for Flutter web
Introduces build-netlify.sh to automate Flutter installation and web build for Netlify deployments. Updates netlify.toml to use the new script and sets Flutter version and channel in the build environment.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
   publish = "build/web"
-  command = "flutter/bin/flutter build web --release --web-renderer canvaskit"
+  command = "chmod +x build-netlify.sh && ./build-netlify.sh"
 
 [build.environment]
-  FLUTTER_VERSION = "3.41.0-1.0.pre-240"
+  FLUTTER_VERSION = "3.24.0"
+  FLUTTER_CHANNEL = "stable"
 
 [[redirects]]
   from = "/*"
