--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,8 @@ android/app/release
 **/Icon?
 **/Pods/
 **/.symlinks/
-profile
+ios/profile
+android/app/profile
 xcuserdata
 **/.generated/
 Flutter/App.framework
