Add new SVG icons, implement user coins and app settings management, and create settings screens
- Added store-icon.svg, time-icon.svg, and valute-icon.svg to assets
- Created UserCoins entity for managing user coin balance and last updated timestamp
- Implemented CoinsNotifier for state management of user coins using Riverpod
- Developed StartScreen with button navigation to home
- Created AppSettings entity for user preferences including username, avatar, language, sound, and vibration settings
- Implemented SettingsNotifier for managing app settings with Riverpod
- Developed HowToPlayScreen, LanguageScreen, ProfileEditScreen, and SettingsScreen for user settings management

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   # Utilities
   cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -37,3 +38,15 @@ flutter:
 
   assets:
     - assets/data/categories.json
+    - assets/header-monster.svg
+    - assets/lock.svg
+    - assets/ai-star.svg
+    - assets/docs-icon.svg
+    - assets/time-icon.svg
+    - assets/flash-icon.svg
+    - assets/start_monster.svg
+    - assets/main-icon.svg
+    - assets/store-icon.svg
+    - assets/achivment-icon.svg
+    - assets/logo.svg
+    - assets/valute-icon.svg
