--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,3 +51,19 @@ flutter:
     - assets/logo.svg
     - assets/valute-icon.svg
     - assets/category.svg
+
+  fonts:
+    - family: Gilroy
+      fonts:
+        - asset: fonts/Gilroy-Light.otf
+          weight: 300
+        - asset: fonts/Gilroy-Regular.ttf
+          weight: 400
+        - asset: fonts/Gilroy-Medium.ttf
+          weight: 500
+        - asset: fonts/Gilroy-Semibold.ttf
+          weight: 600
+        - asset: fonts/Gilroy-Bold.ttf
+          weight: 700
+        - asset: fonts/Gilroy-ExtraBold.otf
+          weight: 800
