Add new SVG assets for logo and play icon
- Added logo-start.svg containing the logo design.
- Added play-icon.svg for the play button graphic.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ flutter:
     - assets/logo.svg
     - assets/valute-icon.svg
     - assets/category.svg
+    - assets/background-frame.svg
+    - assets/play-icon.svg
+    - assets/logo-start.svg
 
   fonts:
     - family: Gilroy
